--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,18 @@
-  [build]
+[build]
   command = "npm run build"
   publish = "dist/public"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/sitemap.xml"
+  to = "/sitemap.xml"
+  status = 200
+
+[[redirects]]
+  from = "/robots.txt"
+  to = "/robots.txt"
   status = 200
